修复短路跳转错误